bugFix: JoinProposal
